--- a/front/login.html
+++ b/front/login.html
@@ -3,8 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="styles/sass/login.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+          rel="stylesheet">
 </head>
 <body>
+<header>
+    <div class="logo">
+        <i class="material-icons">menu</i>
+        <span>Logo</span>
+    </div>
+    <div class="search_inputs">
+        <label for="search"></label>
+        <label for="category"></label>
+        <input type="text" id="search" placeholder="Search by item name">
+        <select id="category">
+            <option value="" disabled selected>All categories</option>
+            <option value="new year">New Year</option>
+            <option value="new year">Alcohol</option>
+            <option value="new year">Another category</option>
+        </select>
+    </div>
 
+    <div class="navigation">
+        <i class="material-icons">favorite</i>
+        <i class="material-icons">shopping_cart</i>
+        <div class="links">
+            <a href="?">Login</a>
+            <span> | </span>
+            <a href="?">Sign Up</a>
+        </div>
+    </div>
+</header>
+<main>
+    <div class="form-login">
+        <div class="logo_container">
+            <div class="logo_place">
+                <span>Logo</span>
+            </div>
+        </div>
+        <div>
+            <label>
+                <input type="text" placeholder="Login">
+            </label>
+        </div>
+        <div>
+            <label>
+                <input type="password" placeholder="Password">
+            </label>
+        </div>
+        <div>
+            <button>Login</button>
+        </div>
+    </div>
+</main>
 </body>
 </html>
