--- a/front/register.html
+++ b/front/register.html
@@ -2,9 +2,88 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Register</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+          rel="stylesheet">
+    <link rel="stylesheet" href="styles/sass/register.css">
 </head>
 <body>
+
+<header>
+    <div class="logo">
+        <i class="material-icons">menu</i>
+        <span>Logo</span>
+    </div>
+    <div class="search_inputs">
+        <label for="search"></label>
+        <label for="category"></label>
+        <input type="text" id="search" placeholder="Search by item name">
+        <select id="category">
+            <option value="" disabled selected>All categories</option>
+            <option value="new year">New Year</option>
+            <option value="new year">Alcohol</option>
+            <option value="new year">Another category</option>
+        </select>
+    </div>
+
+    <div class="navigation">
+        <i class="material-icons">favorite</i>
+        <i class="material-icons">shopping_cart</i>
+        <div class="links">
+            <a href="?">Login</a>
+            <span> | </span>
+            <a href="?">Sign Up</a>
+        </div>
+    </div>
+</header>
+
+
+<main>
+
+    <div class="register_container">
+        <div class="logo_container">
+            <span>Register</span>
+        </div>
+        <div class="inputs_container">
+            <div class="first_column">
+                <div class="item">
+                    <label for="login_name">Login Name</label>
+                    <input type="text" id="login_name">
+                </div>
+                <div class="item">
+                    <label for="password">Password</label>
+                    <input type="password" id="password">
+                </div>
+                <div class="item">
+                    <label for="email">Email</label>
+                    <input type="email" id="email">
+                </div>
+            </div>
+
+            <div class="second_column">
+                <div class="item">
+                    <label for="first_name">First Name</label>
+                    <input type="text" id="first_name">
+                </div>
+                <div class="item">
+                    <label for="repeat_password">Repeat Password</label>
+                    <input type="text" id="repeat_password">
+                </div>
+                <div class="item">
+                    <label for="address">Address</label>
+                    <input type="text" id="address">
+                </div>
+                <div class="item">
+                    <div class="btn_holder">
+                        <button class="transparent_bg">Cancel</button>
+                        <button class="green_bg">Sign Up</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</main>
 
 </body>
 </html>
