--- a/front/main-page.html
+++ b/front/main-page.html
@@ -2,9 +2,473 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Main Page</title>
+    <link rel="stylesheet" href="styles/sass/main-page.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+          rel="stylesheet">
 </head>
 <body>
+<header>
+    <div class="logo">
+        <i class="material-icons">menu</i>
+        <span>Logo</span>
+    </div>
+    <div class="search_inputs">
+        <label for="search"></label>
+        <label for="category"></label>
+        <input type="text" id="search" placeholder="Search by item name">
+        <select id="category">
+            <option value="" disabled selected>All categories</option>
+            <option value="new year">New Year</option>
+            <option value="new year">Alcohol</option>
+            <option value="new year">Another category</option>
+        </select>
+    </div>
+
+    <div class="navigation">
+        <i class="material-icons">favorite</i>
+        <i class="material-icons">shopping_cart</i>
+        <div class="links">
+            <a href="?">Login</a>
+            <span> | </span>
+            <a href="?">Sign Up</a>
+        </div>
+    </div>
+</header>
+
+<div class="category_list">
+    <div class="category_item">
+        <img src="https://www.beautycolorcode.com/ffffff-1280x1024.png" alt="Category">
+        <span>Category</span>
+    </div>
+    <div class="category_item">
+        <img src="https://www.beautycolorcode.com/ffffff-1280x1024.png" alt="Category">
+        <span>Category</span>
+    </div>
+    <div class="category_item">
+        <img src="https://www.beautycolorcode.com/ffffff-1280x1024.png" alt="Category">
+        <span>Category</span>
+    </div>
+    <div class="category_item">
+        <img src="https://www.beautycolorcode.com/ffffff-1280x1024.png" alt="Category">
+        <span>Category</span>
+    </div>
+    <div class="category_item">
+        <img src="https://www.beautycolorcode.com/ffffff-1280x1024.png" alt="Category">
+        <span>Category</span>
+    </div>
+    <div class="category_item">
+        <img src="https://www.beautycolorcode.com/ffffff-1280x1024.png" alt="Category">
+        <span>Category</span>
+    </div>
+</div>
+
+<main>
+    <div class="coupon_list">
+        <div class="coupon_card">
+            <div class="image_part">
+                <img src="https://www.beautycolorcode.com/cdcdcd-2880x1800.png" alt="Grey color">
+            </div>
+            <div class="description_part">
+                <div class="coupon_name">
+                    Coupon Name
+                </div>
+                <div class="icon">
+                    <i class="material-icons">
+                        favorite
+                    </i>
+                </div>
+                <div class="brief_description">
+                    Some brief description
+                </div>
+                <div class="expires_in">
+                    Expires in 3 days
+                </div>
+            </div>
+            <div class="line"></div>
+            <div class="price_part">
+                <div class="price">
+                    $235
+                </div>
+                <div class="add_to_card">
+                    <button>Add to Cart</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="coupon_card">
+            <div class="image_part">
+                <img src="https://www.beautycolorcode.com/cdcdcd-2880x1800.png" alt="Grey color">
+            </div>
+            <div class="description_part">
+                <div class="coupon_name">
+                    Coupon Name
+                </div>
+                <div class="icon">
+                    <i class="material-icons">
+                        favorite
+                    </i>
+                </div>
+                <div class="brief_description">
+                    Some brief description
+                </div>
+                <div class="expires_in">
+                    Expires in 3 days
+                </div>
+            </div>
+            <div class="line"></div>
+            <div class="price_part">
+                <div class="price">
+                    $235
+                </div>
+                <div class="add_to_card">
+                    <button>Add to Cart</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="coupon_card">
+            <div class="image_part">
+                <img src="https://www.beautycolorcode.com/cdcdcd-2880x1800.png" alt="Grey color">
+            </div>
+            <div class="description_part">
+                <div class="coupon_name">
+                    Coupon Name
+                </div>
+                <div class="icon">
+                    <i class="material-icons">
+                        favorite
+                    </i>
+                </div>
+                <div class="brief_description">
+                    Some brief description
+                </div>
+                <div class="expires_in">
+                    Expires in 3 days
+                </div>
+            </div>
+            <div class="line"></div>
+            <div class="price_part">
+                <div class="price">
+                    $235
+                </div>
+                <div class="add_to_card">
+                    <button>Add to Cart</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="coupon_card">
+            <div class="image_part">
+                <img src="https://www.beautycolorcode.com/cdcdcd-2880x1800.png" alt="Grey color">
+            </div>
+            <div class="description_part">
+                <div class="coupon_name">
+                    Coupon Name
+                </div>
+                <div class="icon">
+                    <i class="material-icons">
+                        favorite
+                    </i>
+                </div>
+                <div class="brief_description">
+                    Some brief description
+                </div>
+                <div class="expires_in">
+                    Expires in 3 days
+                </div>
+            </div>
+            <div class="line"></div>
+            <div class="price_part">
+                <div class="price">
+                    $235
+                </div>
+                <div class="add_to_card">
+                    <button>Add to Cart</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="coupon_card">
+            <div class="image_part">
+                <img src="https://www.beautycolorcode.com/cdcdcd-2880x1800.png" alt="Grey color">
+            </div>
+            <div class="description_part">
+                <div class="coupon_name">
+                    Coupon Name
+                </div>
+                <div class="icon">
+                    <i class="material-icons">
+                        favorite
+                    </i>
+                </div>
+                <div class="brief_description">
+                    Some brief description
+                </div>
+                <div class="expires_in">
+                    Expires in 3 days
+                </div>
+            </div>
+            <div class="line"></div>
+            <div class="price_part">
+                <div class="price">
+                    $235
+                </div>
+                <div class="add_to_card">
+                    <button>Add to Cart</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="coupon_card">
+            <div class="image_part">
+                <img src="https://www.beautycolorcode.com/cdcdcd-2880x1800.png" alt="Grey color">
+            </div>
+            <div class="description_part">
+                <div class="coupon_name">
+                    Coupon Name
+                </div>
+                <div class="icon">
+                    <i class="material-icons">
+                        favorite
+                    </i>
+                </div>
+                <div class="brief_description">
+                    Some brief description
+                </div>
+                <div class="expires_in">
+                    Expires in 3 days
+                </div>
+            </div>
+            <div class="line"></div>
+            <div class="price_part">
+                <div class="price">
+                    $235
+                </div>
+                <div class="add_to_card">
+                    <button>Add to Cart</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="coupon_card">
+            <div class="image_part">
+                <img src="https://www.beautycolorcode.com/cdcdcd-2880x1800.png" alt="Grey color">
+            </div>
+            <div class="description_part">
+                <div class="coupon_name">
+                    Coupon Name
+                </div>
+                <div class="icon">
+                    <i class="material-icons">
+                        favorite
+                    </i>
+                </div>
+                <div class="brief_description">
+                    Some brief description
+                </div>
+                <div class="expires_in">
+                    Expires in 3 days
+                </div>
+            </div>
+            <div class="line"></div>
+            <div class="price_part">
+                <div class="price">
+                    $235
+                </div>
+                <div class="add_to_card">
+                    <button>Add to Cart</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="coupon_card">
+            <div class="image_part">
+                <img src="https://www.beautycolorcode.com/cdcdcd-2880x1800.png" alt="Grey color">
+            </div>
+            <div class="description_part">
+                <div class="coupon_name">
+                    Coupon Name
+                </div>
+                <div class="icon">
+                    <i class="material-icons">
+                        favorite
+                    </i>
+                </div>
+                <div class="brief_description">
+                    Some brief description
+                </div>
+                <div class="expires_in">
+                    Expires in 3 days
+                </div>
+            </div>
+            <div class="line"></div>
+            <div class="price_part">
+                <div class="price">
+                    $235
+                </div>
+                <div class="add_to_card">
+                    <button>Add to Cart</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="coupon_card">
+            <div class="image_part">
+                <img src="https://www.beautycolorcode.com/cdcdcd-2880x1800.png" alt="Grey color">
+            </div>
+            <div class="description_part">
+                <div class="coupon_name">
+                    Coupon Name
+                </div>
+                <div class="icon">
+                    <i class="material-icons">
+                        favorite
+                    </i>
+                </div>
+                <div class="brief_description">
+                    Some brief description
+                </div>
+                <div class="expires_in">
+                    Expires in 3 days
+                </div>
+            </div>
+            <div class="line"></div>
+            <div class="price_part">
+                <div class="price">
+                    $235
+                </div>
+                <div class="add_to_card">
+                    <button>Add to Cart</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="coupon_card">
+            <div class="image_part">
+                <img src="https://www.beautycolorcode.com/cdcdcd-2880x1800.png" alt="Grey color">
+            </div>
+            <div class="description_part">
+                <div class="coupon_name">
+                    Coupon Name
+                </div>
+                <div class="icon">
+                    <i class="material-icons">
+                        favorite
+                    </i>
+                </div>
+                <div class="brief_description">
+                    Some brief description
+                </div>
+                <div class="expires_in">
+                    Expires in 3 days
+                </div>
+            </div>
+            <div class="line"></div>
+            <div class="price_part">
+                <div class="price">
+                    $235
+                </div>
+                <div class="add_to_card">
+                    <button>Add to Cart</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="coupon_card">
+            <div class="image_part">
+                <img src="https://www.beautycolorcode.com/cdcdcd-2880x1800.png" alt="Grey color">
+            </div>
+            <div class="description_part">
+                <div class="coupon_name">
+                    Coupon Name
+                </div>
+                <div class="icon">
+                    <i class="material-icons">
+                        favorite
+                    </i>
+                </div>
+                <div class="brief_description">
+                    Some brief description
+                </div>
+                <div class="expires_in">
+                    Expires in 3 days
+                </div>
+            </div>
+            <div class="line"></div>
+            <div class="price_part">
+                <div class="price">
+                    $235
+                </div>
+                <div class="add_to_card">
+                    <button>Add to Cart</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="coupon_card">
+            <div class="image_part">
+                <img src="https://www.beautycolorcode.com/cdcdcd-2880x1800.png" alt="Grey color">
+            </div>
+            <div class="description_part">
+                <div class="coupon_name">
+                    Coupon Name
+                </div>
+                <div class="icon">
+                    <i class="material-icons">
+                        favorite
+                    </i>
+                </div>
+                <div class="brief_description">
+                    Some brief description
+                </div>
+                <div class="expires_in">
+                    Expires in 3 days
+                </div>
+            </div>
+            <div class="line"></div>
+            <div class="price_part">
+                <div class="price">
+                    $235
+                </div>
+                <div class="add_to_card">
+                    <button>Add to Cart</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="coupon_card">
+            <div class="image_part">
+                <img src="https://www.beautycolorcode.com/cdcdcd-2880x1800.png" alt="Grey color">
+            </div>
+            <div class="description_part">
+                <div class="coupon_name">
+                    Coupon Name
+                </div>
+                <div class="icon">
+                    <i class="material-icons">
+                        favorite
+                    </i>
+                </div>
+                <div class="brief_description">
+                    Some brief description
+                </div>
+                <div class="expires_in">
+                    Expires in 3 days
+                </div>
+            </div>
+            <div class="line"></div>
+            <div class="price_part">
+                <div class="price">
+                    $235
+                </div>
+                <div class="add_to_card">
+                    <button>Add to Cart</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
 
 </body>
 </html>
