scroll event added

--- a/front/main-page.html
+++ b/front/main-page.html
@@ -9,7 +9,7 @@
 
     <script src="js/main-page.js"></script>
 </head>
-<body>
+<body id="id">
 <header>
     <div class="logo">
         <i class="material-icons">menu</i>
