--- a/front/checkout.html
+++ b/front/checkout.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles/sass/checkout.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
           rel="stylesheet">
+    <script src="js/checkout.js"></script>
 </head>
 <body>
 
@@ -116,6 +117,7 @@
         </div>
         <div class="btn_container">
             <div class="btn_place">
+                <button class="transparent_bg" onclick="topFunction()">Back to top</button>
                 <button class="transparent_bg">Back</button>
                 <button class="green_bg">Save</button>
             </div>
